# madhacks2025

./: .dockerignore  Dockerfile  README.md
.github/workflows/: build.yml  deploy.yml  rust-ci.yml
apps/: SPEC.md  formatted_game.json
apps/node_server/: README.md  SPEC.md  package.json
apps/node_server/src/: index.ts  types.ts
apps/node_server/src/game/: Player.ts  Room.ts  RoomManager.ts  gameMachine.ts
apps/node_server/src/routes/: rooms.ts
apps/node_server/src/ws/: handler.ts  messages.ts
apps/server/: Cargo.toml
apps/server/src/: game.rs  game_file.rs  host.rs  lib.rs  main.rs  player.rs  ws_msg.rs
apps/server/tests/: integration_tests.rs
apps/server/tests/common/: mod.rs
apps/web/: index.html  package.json  pnpm-lock.yaml  sample_game.json
apps/web/src/: App.tsx
apps/web/src/hooks/: useWebSocket.ts
apps/web/src/lib/: api.ts
apps/web/src/pages/: Host.tsx  HostDisplay.tsx  Lobby.tsx  Player.tsx
apps/web/src/types/: messages.ts
