[package]
name = "madhacks2025"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = [ version = "0.8.7", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28.0"
http = "1.3.1"
