[package]
name = "madhacks2025"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28.0"
http = "1.3.1"
anyhow = "1.0.100"
futures = "0.3.31"
tokio-mpmc = "0.2.4"
rand = "0.9"
axum-macros = "0.5.0"
tower-http = { version = "0.6", features = ["fs"] }

[lints.clippy]
unwrap-used = "deny"
todo = "deny"
unimplemented = "deny"
